# docs/swagger.yaml
@@ -544,6 +544,44 @@ paths:
       summary: View User Profile
       tags:
       - Profiles
+  /profiles/profile/{username}/follow:
+    get:
+      description: '`This endpoint allows a user to follow or unfollow a writer`.'
+      parameters:
+      - description: Username of the user to follow or unfollow
+        in: path
+        name: username
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.ResponseSchema'
+        "400":
+          description: Returns an error for invalid request parameters.
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "403":
+          description: Returns an error when trying to follow a user that isn't a
+            writer
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "404":
+          description: Returns an error when either the user to follow or the follower
+            user does not exist.
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Returns an error when there is an internal server error or
+            a transaction fails.
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Toggle Follow Status
+      tags:
+      - Profiles
   /profiles/update:
     patch:
       description: This endpoint updates a user's profile
